--- a/competencias_es.html
+++ b/competencias_es.html
@@ -284,7 +284,11 @@ body.dark footer {
         </div>
         <div class="card">
             <h3>Música</h3>
-            <p>Creo pequeñas producciones y sé utilizar algunos programas.</p>
+            <p>Realización de pequeñas producciones y uso de software de audio.</p>
+            <audio controls style="margin-top: 10px; width: 100%;">
+                <source src="techno-music.mp3" type="audio/mpeg">
+                Tu navegador no soporta el elemento de audio.
+            </audio>
         </div>
         <div class="card">
             <h3>Bilingüe</h3>
