--- a/projets_fr.html
+++ b/projets_fr.html
@@ -231,7 +231,7 @@ footer.show { opacity: 1; transform: translateY(0); }
     <div class="cards">
         <div class="card">
             <h3>Projet 1: Robot cup (Fini)</h3>
-            <p>Robot construit de A à Z</p>
+            <p>Robot construit de A à Z. Il fallait programmer un robot qu'il fasse un parcours tout en suivant une ligne noire</p>
         </div>
         <div class="card">
             <h3>Projet 2: Construction d'une enceinte DIY (En cours)</h3>
