--- a/proyectos_es.html
+++ b/proyectos_es.html
@@ -230,7 +230,7 @@ footer.show { opacity: 1; transform: translateY(0); }
         <!-- Carte projet -->
         <div class="card">
             <h3>Proyecto 1: Robot Cup (Finalizado)</h3>
-            <p>Robot construido desde cero.</p>
+            <p>Robot construido de la A a la Z. Había que programar un robot para que hiciera un recorrido siguiendo una línea negra.</p>
         </div>
         <div class="card">
             <h3>Proyecto 2: Construcción de un altavoz DIY (En curso)</h3>
